[project]
name = "pubmedteb"
version = "0.1.0"
description = "PubMedTEB: A biomedical text embedding benchmark built on PubMed abstracts"
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
    "duckdb>=1.5.0",
    "ipykernel>=7.2.0",
    "matplotlib>=3.10.8",
    "pandas>=3.0.1",
    "parquet>=1.3.1",
    "polars>=1.39.0",
    "pyarrow>=23.0.1",
    "scipy",
    "seaborn>=0.13.2",
    "scikit-learn>=1.6.0",
    "jinja2>=3.1.6",
    "mteb>=2.0.0",
    "sentence-transformers>=3.0.0",
    "datasets>=2.0.0",
    "torch>=2.0.0",
    "umap-learn>=0.5.11",
]
